@@ -1,3 +1,4 @@
 README
+README.rfb
 TESTFORM.txt
 debian/README.plugins
