@@ -1,7 +1,7 @@
 ---
- .bochsrc        |   87 ++++++++++----------------------------------------------
+ .bochsrc        |   85 +++++++++++---------------------------------------------
  doc/man/bochs.1 |    4 +-
- 2 files changed, 19 insertions(+), 72 deletions(-)
+ 2 files changed, 19 insertions(+), 70 deletions(-)
 
 --- a/.bochsrc
 +++ b/.bochsrc
@@ -15,7 +15,7 @@
  
  #=======================================================================
  # DISPLAY_LIBRARY
-@@ -34,15 +33,9 @@
+@@ -34,11 +33,6 @@
  #
  # The choices are: 
  #   x              use X windows interface, cross platform
@@ -27,11 +27,7 @@
  #   sdl            use SDL library, cross platform
  #   svga           use SVGALIB library for Linux, allows graphics without X11
  #   term           text only, uses curses/ncurses library, cross platform
--#   rfb            provides an interface to AT&T's VNC viewer, cross platform
- #   wx             use wxWidgets library, cross platform
- #   nogui          no display at all
- #
-@@ -53,16 +46,10 @@
+@@ -53,16 +47,11 @@
  # Some display libraries now support specific option to control their
  # behaviour. See the examples below for currently supported options.
  #=======================================================================
@@ -40,7 +36,7 @@
 -#display_library: carbon
 -#display_library: macintosh
  #display_library: nogui
--#display_library: rfb, options="timeout=60" # time to wait for client
+ #display_library: rfb, options="timeout=60" # time to wait for client
  #display_library: sdl, options="fullscreen" # startup in fullscreen mode
  #display_library: term
 -#display_library: win32, options="gui_debug" # use Win32 debugger gui
@@ -49,7 +45,7 @@
  #display_library: x, options="hideIPS" # disable IPS output in status bar
  #display_library: x, options="gui_debug" # use GTK debugger gui
  
-@@ -79,7 +66,7 @@
+@@ -79,7 +68,7 @@
  # now supported, but we still recommend to use the BIOS distributed with
  # Bochs. The start address optional, since it can be calculated from image size.
  #=======================================================================
@@ -58,7 +54,7 @@
  #romimage: file=bios/seabios-0.5.1.bin
  #romimage: file=mybios.bin, address=0xfff80000 # 512k at memory top
  
-@@ -254,9 +241,8 @@ memory: guest=512, host=256
+@@ -254,9 +243,8 @@ memory: guest=512, host=256
  # VGAROMIMAGE
  # You now need to load a VGA ROM BIOS into C0000.
  #=======================================================================
@@ -70,7 +66,7 @@
  
  #=======================================================================
  # VGA:
-@@ -382,14 +368,11 @@ ata3: enabled=0, ioaddr1=0x168, ioaddr2=
+@@ -382,14 +370,11 @@ ata3: enabled=0, ioaddr1=0x168, ioaddr2=
  #   ata3-master: type=disk, mode=flat, path=483M.sample, cylinders=1024, heads=15, spt=63
  #   ata3-slave:  type=cdrom, path=iso.sample, status=inserted
  #=======================================================================
@@ -88,7 +84,7 @@
  
  #=======================================================================
  # BOOT:
-@@ -403,7 +386,8 @@ ata0-master: type=disk, mode=flat, path=
+@@ -403,7 +388,8 @@ ata0-master: type=disk, mode=flat, path=
  #   boot: cdrom, floppy, disk
  #=======================================================================
  #boot: floppy
@@ -98,7 +94,7 @@
  
  #=======================================================================
  # CLOCK:
-@@ -464,8 +448,9 @@ floppy_bootsig_check: disabled=0
+@@ -464,8 +450,9 @@ floppy_bootsig_check: disabled=0
  #   log: ./bochs.out
  #   log: /dev/tty
  #=======================================================================
@@ -109,7 +105,7 @@
  
  #=======================================================================
  # LOGPREFIX:
-@@ -557,7 +542,7 @@ debugger_log: -
+@@ -557,7 +544,7 @@ debugger_log: -
  #   com4: enabled=1, mode=pipe-client, dev=\\.\pipe\mypipe
  #   com4: enabled=1, mode=pipe-server, dev=\\.\pipe\mypipe
  #=======================================================================
@@ -118,7 +114,7 @@
  
  
  #=======================================================================
-@@ -573,7 +558,7 @@ debugger_log: -
+@@ -573,7 +560,7 @@ debugger_log: -
  #   parport2: enabled=1, file="/dev/lp0"
  #   parport1: enabled=0
  #=======================================================================
@@ -127,7 +123,7 @@
  
  #=======================================================================
  # SB16:
-@@ -611,7 +596,7 @@ parport1: enabled=1, file="parport.out"
+@@ -611,7 +598,7 @@ parport1: enabled=1, file="parport.out"
  #   sb16: midimode=1, midi="", wavemode=1, wave=""           # win32
  #   sb16: midimode=1, midi=alsa:128:0, wavemode=1, wave=alsa # Linux with ALSA
  #=======================================================================
@@ -136,7 +132,7 @@
  
  #=======================================================================
  # VGA_UPDATE_INTERVAL:
-@@ -702,18 +687,6 @@ mouse: enabled=0
+@@ -702,18 +689,6 @@ mouse: enabled=0
  private_colormap: enabled=0
  
  #=======================================================================
@@ -155,7 +151,7 @@
  # ne2k: NE2000 compatible ethernet adapter
  #
  # Examples:
-@@ -754,10 +727,7 @@ private_colormap: enabled=0
+@@ -754,10 +729,7 @@ private_colormap: enabled=0
  #         overwrite files.
  #
  #=======================================================================
@@ -167,7 +163,7 @@
  # ne2k: ioaddr=0x300, irq=9, mac=fe:fd:00:00:00:01, ethmod=tap, ethdev=tap0
  # ne2k: ioaddr=0x300, irq=9, mac=fe:fd:00:00:00:01, ethmod=tuntap, ethdev=/dev/net/tun0, script=./tunconfig
  # ne2k: ioaddr=0x300, irq=9, mac=b0:c4:20:00:00:01, ethmod=null, ethdev=eth0
-@@ -785,7 +755,7 @@ private_colormap: enabled=0
+@@ -785,7 +757,7 @@ private_colormap: enabled=0
  # Examples:
  #   keyboard_mapping: enabled=1, map=gui/keymaps/x11-pc-de.map
  #=======================================================================
@@ -176,7 +172,7 @@
  
  #=======================================================================
  # KEYBOARD_TYPE:
-@@ -964,26 +934,3 @@ i440fxsupport: enabled=1
+@@ -964,26 +936,3 @@ i440fxsupport: enabled=1
  # See the example in the Bochs sources how to write a plugin device.
  #=======================================================================
  #user_plugin: name=testdev
