@@ -4,6 +4,7 @@ bochs (2.4.6-5) UNRELEASED; urgency=low
   * Remove sb16ctrl.exe from upstream tarball in debian/tarball.sh.
   * Add missing backslash to escape $ on XPM_LIB variable:
     - debian/patches/link-only-needed-libs.patch
+  * Enable support for RFB protocol as GUI frontend (works with VNC viewer).
 
  -- Guillem Jover <guillem@debian.org>  Thu, 29 Dec 2011 21:49:06 +0100
 
